Update .env.example for backend.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,5 @@
 PORT = 8000
 BASE_URL = "http://localhost"
+CLOUDINARY_CLOUD_NAME=YOUR_CLOUDINARY_CLOUD_NAME
+CLOUDINARY_API_KEY=YOUR_CLOUDINARY_API
+CLOUDINARY_API_SECRET=YOUR_CLOUDINARY_API_SECRET
